# srachka-ai

./: .gitignore  CHANGELOG.md  README.md  better-cli-ux.md  cleanup-project-layout.md  commit-per-step.md  config.example.json  do-step.md  file-logging.md  pyproject.toml  srachka-init.md  timeout.md
.claude/: settings.local.json.example
.srachka/schemas/: plan.schema.json
examples/: TASK.md
hooks/: review_with_codex.py
schemas/: diff_review.schema.json  plan_review.schema.json
srachka_ai/: __init__.py  cli.py  config.py  init_prompt.md  models.py  orchestrator.py  paths.py  prompts.py  providers.py  shell.py  state.py  task_file.py  utils.py  worktree.py
tests/: test_cli.py  test_cli_task_file.py  test_models.py  test_orchestrator.py  test_providers.py  test_shell_timeout.py  test_task_file.py  test_worktree.py
